--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img src="IEEE-CS_LogoTM-orange.png" alt="CS LOGO" height="70px">
             <form action="#">
                 <div class="formelement">
-                    <label for="">Username: </label>
+                    <label for="username">Username: </label>
                     <input type="text" id="username" size="30" placeholder="    Enter the username">
                 </div>
                 <div class="formelement">
